# c_buffer

./: Cargo.toml  README.md  build.rs
examples/: test_datenlord_sdk.c
examples/c/: datenlord.h  main  test_datenlord_sdk.c
examples/py/: test.py
examples/pybind11/: test.py
include/: datenlord.h
src/: lib.rs
src/common/: mod.rs
src/sdk/: datenlord.rs  mod.rs
src/sdk/c/: datenlord.rs
src/sdk/py/: datenlord.rs  mod.rs
src/sdk/pybind11/: bindings.cpp  datenlord.h  mod.rs  test.py
src/storage/: fs_util.rs  localfs.rs  mod.rs  virtualfs.rs
