[package]
name = "datenlord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.26.0"

[lib]
name = "datenlord"
crate-type = ["cdylib", "staticlib"]
doc = false

[dependencies]
bytes = "1.4.0"
tokio = { version = "1.27", features = ["full", "fs", "macros", "rt-multi-thread"] }
async-trait = "0.1.50"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.31"
clippy-utilities = "0.1.0"
nix = { version = "0.28.0", features = ["fs", "ioctl", "signal", "user", "mount", "socket"] }
serde-xml-rs = "0.6"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0"
thiserror = "1.0.22"
opendal = {version = "0.43.0", features = ["layers-prometheus"]}
pyo3 = { version = "0.16", features = ["extension-module"] }

[package.metadata.maturin]
bindings = "pyo3"